--- a/SistemaDeInventarioASOEM.csproj
+++ b/SistemaDeInventarioASOEM.csproj
@@ -6,16 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>ncs\logo.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="BaseProductos.db" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="BaseProductos.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Resource Include="ncs\logo.ico" />
   </ItemGroup>
 
   <ItemGroup>
